@@ -1,3 +1,5 @@
+  * in META.{yml,json}, point to public git repository
+
 version 0.007; 2012-03-10
 
   * bugfix: recognise zone disuse indicator if it comes in the form of
